--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,13 +1,7 @@
 name: Go Build and Release
 
 on:
-  push:
-    tags:
-      - 'v*'
-
-permissions:
-  contents: write
-  packages: write
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,7 +20,9 @@ jobs:
         run: go test ./...
 
       - name: 编译
-        run: go build -o ghproxy-go ./main.go
+        run: |
+          go env -w GOOS=linux GOARCH=amd64 GOAMD64=v3
+          go build -o ghproxy-go -trimpath -ldflags "-s -w -buildid=" ./main.go
 
       - name: 创建 ZIP 文件
         run: zip ghproxy-go-linux-64.zip ghproxy-go blacklist.txt
@@ -34,8 +30,9 @@ jobs:
       - name: 创建发布
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          release_name: ghproxy-go v${{ github.ref_name }}  
+          tag_name: ghproxy-go
+          release_name: ghproxy-go
+          replacesArtifacts: true
           files: ghproxy-go-linux-64.zip
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
